--- a/back-end/package.json
+++ b/back-end/package.json
@@ -9,11 +9,24 @@
     "start": "node .",
     "debugging": "node --inspect-brk ."
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.3.1",
+    "bcrypt": "^5.1.0",
+    "cloudinary": "^1.37.2",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.1.4",
     "express": "^4.18.2",
-    "mongoose": "^7.3.1"
+    "form-data": "^4.0.0",
+    "jsonwebtoken": "^9.0.0",
+    "mailgun.js": "^9.1.0",
+    "mongoose": "^7.3.0",
+    "multer": "^1.4.5-lts.1"
+  },
+  "devDependencies": {
+    "@babel/eslint-parser": "^7.22.5",
+    "@babel/plugin-syntax-import-assertions": "^7.22.5",
+    "eslint": "^8.42.0"
   }
 }
