Customize(emailTemplate.js, email.js): update data

--- a/.env.init
+++ b/.env.init
@@ -1,3 +1,6 @@
 BE_PORT=3000
 DB=mongodb://localhost:27017/databaseName
 TOKEN_SECRET=123
+MAILGUN_API_KEY=637462930lcboeitcxmewzosxsdfgjda-g8934643-l3826438
+CLIENT_URL=http://localhost:3000
+EMAIL_ADRESS=test@test.com
