Customize(server.js, .env): add cloudinary config/upload & multer store
forgot to stage .env

--- a/.env.init
+++ b/.env.init
@@ -4,3 +4,6 @@ TOKEN_SECRET=123
 MAILGUN_API_KEY=637462930lcboeitcxmewzosxsdfgjda-g8934643-l3826438
 CLIENT_URL=http://localhost:3000
 EMAIL_ADRESS=test@test.com
+CLOUDINARY_CLOUD_NAME=dkjsfh6ds
+CLOUDINARY_API_KEY=307200571651034
+CLOUDINARY_API_SECRET=jHo8s-UsndUZJZxObZDpslffdhe
