--- a/front-end/package.json
+++ b/front-end/package.json
@@ -14,6 +14,7 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.0",
     "recharts": "^2.7.2",
     "semantic-ui-css": "^2.5.0",
