--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "axios": "^1.4.0",
+    "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.1",
     "recharts": "^2.7.2",
     "semantic-ui-css": "^2.5.0",
