--- a/.env.init
+++ b/.env.init
@@ -7,3 +7,4 @@ EMAIL_ADRESS=test@test.com
 CLOUDINARY_CLOUD_NAME=dkjsfh6ds
 CLOUDINARY_API_KEY=307200571651034
 CLOUDINARY_API_SECRET=jHo8s-UsndUZJZxObZDpslffdhe
+PATHNAME=path/to/your/project/index
