--- a/front-end/package.json
+++ b/front-end/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/joy": "^5.0.0-alpha.86",
     "@mui/material": "^5.13.7",
     "@mui/x-date-pickers": "^6.9.2",
     "axios": "^1.4.0",
