--- a/back-end/package.json
+++ b/back-end/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^5.1.0",
     "cloudinary": "^1.37.2",
     "cookie-parser": "^1.4.6",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "form-data": "^4.0.0",
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@babel/eslint-parser": "^7.22.5",
     "@babel/plugin-syntax-import-assertions": "^7.22.5",
+    "@types/crypto-js": "^4.1.1",
     "eslint": "^8.42.0"
   }
 }
